--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <title>New Tab Deluxe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Bootstrap -->
+  <!-- https://getbootstrap.com/docs/5.0/getting-started/introduction/ -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
   <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
+  <div id="main" class="container-fluid row">
+    <!-- Populated by script.js -->
+  </div>
+
   <script src="key.js"></script>
   <script src="day_weather.js"></script>
   <script src="script.js"></script>
